Update initrd.gz with new permissions and more fixes
Change-Id: Ib376666a7db61292a57f856e14656b3fd41f8aac

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -25,9 +25,9 @@
     <bool name="config_automatic_brightness_available">true</bool>
 
    
-    <bool name="config_animateScreenLights">true</bool>
+    <bool name="config_animateScreenLights">false</bool>
 
-    <!-- disable menu hard key on Passion in non-pattern lockscreen -->
+    <!-- disable menu hard key on HD2 in non-pattern lockscreen -->
     <bool name="config_disableMenuKeyInLockScreen">true</bool>
 
     <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
