--- a/overlay/packages/apps/Phone/res/values/config.xml
+++ b/overlay/packages/apps/Phone/res/values/config.xml
@@ -19,7 +19,7 @@
 
     <!-- Enable the onscreen touch UI for all states of the in-call UI. -->
     <bool name="allow_incoming_call_touch_ui">true</bool>
-    <bool name="allow_in_call_touch_ui">true</bool>
+    <bool name="allow_in_call_touch_ui">false</bool>
 
     <!-- This is a device with capacitive buttons, so disable the feature
          where BACK rejects the current incoming call.  (Since it's so
@@ -34,8 +34,4 @@
          AudioHardware::setMicMute(bool state) and AudioHardware::getMicMute(bool* state)
          so microphone muting calls should be routed through the AudioManager API. -->
     <bool name="send_mic_mute_to_AudioManager">true</bool>
-
-    <!-- This device implements a noise suppression device for in call audio-->
-    <bool name="has_in_call_noise_suppression">true</bool>
-
 </resources>
