--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -162,11 +162,7 @@
          Wifi interfaces.  If the device doesn't want to support tethering over Wifi this
          should be empty.  An example would be "softap.*" -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-	<item>"rmnet\\d"</item>
         <item>"wl0.1"</item>
-    </string-array>
-	 <string-array translatable="false" name="config_tether_usb_regexs">
-        <item>"usb0"</item>
     </string-array>
 
   <!-- Vibrator pattern for a very short but reliable vibration for soft keyboard tap -->
@@ -186,5 +182,11 @@
    <!-- Enable use of power animations -->
     <bool name="config_animateScreenLights">false</bool>
 
+    <bool name="cm_default_has_soft_buttons">true</bool>
+    <bool name="cm_default_show_soft_home">false</bool>
+    <bool name="cm_default_show_soft_menu">false</bool>
+    <bool name="cm_default_show_soft_back">false</bool>
+    <bool name="cm_default_show_soft_search">false</bool>
+    <bool name="cm_default_show_soft_quick_na">false</bool>
 
 </resources>
